# gmail-cleaner

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gmail_api.py  pyproject.toml  pyrightconfig.json
app/api/: actions.py  status.py
app/core/: state.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  gmail.py
static/: script.js
static/css/: components.css
static/js/: auth.js  delete.js  filters.js  labels.js
templates/: index.html
